# osrs-planner-tool

./: .gitignore  CLAUDE.md  SPEC.md  curriculum-part2.md  curriculum.md  pyproject.toml
.claude/: settings.local.json
data/: BUILD.md  DIARY_REWARDS.md  QUEST_REWARDS.md  _dropsline.py  _polish_bosses_pvm.py  _raid_scaling.py  _rarity_grammar.py  _toa_drop_rates.py  account_cost_split.json  achievement_diaries.json  add_item_id_to_items_equipment.py  audit_quest_requirements.py  banked_xp_dataset.json  bosses_pvm.json  build_account_cost_split.py  build_item_dictionary.py  build_money_making.py  charge_recipes.json  clue_scrolls.json  collection_log.json  combat_achievements.json  completion_goals.json  currencies.json  degrade_paths.json  diary_content_nodes.json  diary_goals.json  diary_rewards.json  drop_rates.json  fetch_facility_infoboxes.py  fetch_items_equipment.py  fetch_npc_infoboxes.py  fetch_recipe_facilities.py  fetch_recipes.py  fetch_shop_infoboxes.py  fetch_storeline.py  fetch_world_infoboxes.py  fetch_world_locations.py  gather.json  ge_prices.json  ironman_money_making.json  (+52 more)
decisions/: 2026-06-13-0001-web-app-first.md  2026-06-13-0002-frontend-vanilla-no-build.md  2026-06-13-0003-three-layer-architecture.md  2026-06-13-0004-public-multi-account.md
kg/: competency_questions.json  condition_groups.json  edges.json  nodes.json  schema.json
kg_ingest/: __init__.py  assemble.py  demo.py  ids.py  recipe_identity.py
notes/: final-recap.md  next_steps_and_ideas.md
outputs/: README.md  gilded-tome-iron.rs2f  gilded-tome-tiger0295.rs2f  (+1 more)
web/: app.js  (+4 more)
(+369 files in other folders)
