[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/osrs_planner"]

[project]
name = "osrs-planner"
description = "A tool for planning and optimizing skill training in OldSchool RuneScape."
authors = [{name = "retro"}]
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic",
    "pytest",
    "httpx",
    "fastapi",
    "uvicorn",
]
